hacking on browzine; not working yet

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-# primo-explore/custom/
 primo-explore/tmp/
 .idea/
 package-lock.json
 /node_modules/
 
 *.secret
+
+# built packages should not be included in a repository, because they may include raw API keys within the package (e.g. Browzine)
+packages/*
